[package]
name = "linked_list"
version = "0.1.0"
edition = "2021"
authors = ["Wedson Almeida Filho <wedsonaf@google.com>"]
description = "Linked lists that supports arbitrary removal in constant time"
license = "GPL-2.0-or-later"
documentation = "https://Starry-OS.github.io/arceos/linked_list/index.html"
keywords = ["Starry"]

[dependencies]
