[package]
name = "linked_list"
version = "0.1.0"
edition = "2021"
authors = ["Wedson Almeida Filho <wedsonaf@google.com>"]
description = "Linked lists that supports arbitrary removal in constant time"
license = "GPL-2.0-or-later"
documentation = "https://starry-os.github.io/linked_list/"
keywords = ["Starry"]

[dependencies]
